<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.WeatherListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ctn_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/ctn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:background="@drawable/bg_lavander_rounded"
                android:elevation="@dimen/elevation_medium"
                android:queryBackground="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:iconifiedByDefault="false"
                app:layout_collapseMode="pin"
                app:queryBackground="@android:color/transparent" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_weather_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <LinearLayout
        android:id="@+id/ctn_alert_message"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:contentDescription="@string/empty_title"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_box_white_top_16_bottom_16"
            android:maxWidth="148dp"
            android:maxHeight="148dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_unknown_weather" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bg_box_white_top_16_bottom_16"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/empty_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_box_white_top_16_bottom_16"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/empty_message"
            android:textColor="@color/black" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_scroll_to_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/margin_small"
        android:contentDescription="@string/scroll_to_top"
        android:elevation="@dimen/elevation_large"
        android:src="@drawable/ic_arrow_up"
        android:visibility="gone"
        app:background="@color/lavender"
        app:backgroundTint="@color/lavender"
        app:rippleColor="@android:color/holo_purple"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pgr_loading_indicator"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_lavander_rounded"
        android:indeterminateTint="@android:color/holo_purple"
        android:padding="@dimen/margin_small"
        android:visibility="gone"
        tools:visibility="visible" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>